# frontier-radar

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  pyproject.toml
config/: jobs.yaml  llm.yaml  sources.yaml  topics.yaml
docs/scheduling/: agent-automation.md  codex.md  cron.md  launchd.md  systemd.md
docs/superpowers/plans/: 2026-06-22-frontier-radar-reliability-jobs.md  2026-06-22-frontier-radar.md
docs/superpowers/specs/: 2026-06-22-frontier-radar-design.md  2026-06-22-frontier-radar-reliability-jobs-design.md
frontier_radar/: __init__.py  chat.py  cli.py  config.py  daily.py  jobs.py  llm.py  models.py  ranking.py  raw.py  storage.py  web.py
frontier_radar/collectors/: __init__.py  arxiv.py  base.py  github.py  hn.py  manual.py  rss.py
frontier_radar/wiki/: __init__.py  lint.py  render.py
manual/: x-notes.md
raw/2026-06-22/arxiv/: 20260622T052718Z-1.xml  20260622T052718Z-2.xml  20260622T052718Z.xml  20260622T080940Z-1.xml  20260622T080940Z-2.xml  20260622T080940Z.xml
raw/2026-06-22/github/: 20260622T051440Z-1.json  20260622T051440Z-2.json  20260622T051440Z.json  20260622T052718Z-1.json  (+5 more)
state/: frontier-radar.sqlite
tests/: test_chat.py  test_cli.py  test_collectors.py  test_config.py  test_daily.py  test_docs_layout.py  test_jobs_config.py  test_llm.py  test_models.py  test_package_metadata.py  test_ranking.py  test_raw_storage.py  test_reliability_jobs.py  test_reliability_storage.py  test_storage.py  test_web.py  test_wiki_lint.py  test_wiki_render.py
wiki/: index.md  log.md  sources.md
wiki/daily/: 2026-06-22.md
(+14 files in other folders)
