[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-radar"
version = "0.1.0"
description = "Harness-agnostic local tracker and Markdown wiki for frontier AI signals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
test = ["pytest>=8.2"]

[project.scripts]
frontier-radar = "frontier_radar.cli:main"

[tool.setuptools.packages.find]
include = ["frontier_radar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
